Next (not yet released)

* Vendor prefix rule only checks for known rules (fixes #93, #54, #27)
* Make sure @font-face doesn't break vendor-prefix rule (fixes #90)
* Make sure that url() with spaces before the URI works (fixes #94)

June 25, 2011 - v0.3.2

* Fixed regression in output format for CLI (fixes #87)

June 25, 2011 - v0.3.1

* Fixed EOL issue for Node.js CLI

June 25, 2011 - v0.3.0

* Rhino and Node CLIs both exit with code 1 when there are errors (pull #72)
* Changed description of adjoining classes to be unsupported in IE6 (fixes #11)
* Made license comment important in build files (fixes #46)
* Code cleanup (pull #70)
* Cleanup of whitespace (pull #74)
* Standardization of CLI interface (pull #81)
* Switched display-property-grouping to allow padding, margin-left, and margin-right for display: inline (fixes #3)
* Changed messaging for float rule (fixes #26)
* border:none with width/height is okay (fixes #45)
* Updated web worker to accept JSON-encoded input
* Allow turning on/off rules in web interface and CLIs (fixes #77)
* Introduced release directory that will hold official release version
* Build directory will be removed in next release

June 18, 2011 - v0.2.0

* Make sure headings are counted correctly (fixes #25)
* Make sure float: none doesn't count as a float for rules that care (fixes #10)
* Fix erroneous missing standard border warning (fixes #7)
* Ensure width: 100% is okay when box-sizing is specified (fixes #5)
* Fixed up width/height properties for box model rule (fixes #8)
* Incorporated Rhino CLI and updated contributors list
* Include build file in Git repo so people can grab directly (fixes #59)
* Added rule for tracking using of !important from shinuza (fixes #50)

June 15, 2011 - v0.1.0

* Initial release