@@ -21,7 +21,7 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
 
 */
-/* Build time: 28-June-2011 09:28:08 */
+/* Build time: 5-July-2011 11:54:47 */
 var CSSLint = (function(){
 /*!
 Parser-Lib
@@ -4815,7 +4815,6 @@ Tokens              :Tokens
 };
 })();
 
-
 /**
  * YUI Test Framework
  * @module yuitest
@@ -9377,7 +9376,6 @@ YUITest.PageManager = YUITest.Util.mix(new YUITest.EventTarget(), {
         return new TestRunner();
 
     }();
-
 /**
  * Main CSSLint object.
  * @class CSSLint
@@ -9473,7 +9471,6 @@ var CSSLint = (function(){
     return api;
 
 })();
-
 /**
  * An instance of Report is used to report results of the
  * verification back to the main API.
@@ -9608,7 +9605,6 @@ Reporter.prototype = {
         this.stats[name] = value;
     }
 };
-
 /*
  * Utility functions that make life easier.
  */
@@ -9832,7 +9828,7 @@ CSSLint.addRule({
                         reportProperty("margin", display);
                         reportProperty("margin-top", display);
                         reportProperty("margin-bottom", display);              
-                        reportProperty("float", display);
+                        reportProperty("float", display, "display:inline has no effect on floated elements (but may be used to fix the IE6 double-margin bug).");
                         break;
 
                     case "block":
@@ -9863,10 +9859,10 @@ CSSLint.addRule({
         });
 
 
-        function reportProperty(name, display){
+        function reportProperty(name, display, msg){
             if (properties[name]){
                 if (!(typeof propertiesToCheck[name] == "string") || properties[name].value.toLowerCase() != propertiesToCheck[name]){
-                    reporter.warn(name + " can't be used with display: " + display + ".", properties[name].line, properties[name].col, rule);
+                    reporter.warn(msg || name + " can't be used with display: " + display + ".", properties[name].line, properties[name].col, rule);
                 }
             }
         }
@@ -10612,7 +10608,6 @@ CSSLint.addRule({
 
 return CSSLint;
 })();
-
 //print for rhino and nodejs
 if(typeof print == "undefined") {
     var print = console.log;
@@ -10806,4 +10801,3 @@ if (!files.length) {
     });
 }
 quit(Number(exitCode));
-
