@@ -1,0 +1,17 @@
+(function(){
+
+    /*global YUITest, CSSLint*/
+    var Assert = YUITest.Assert;
+
+    YUITest.TestRunner.add(new YUITest.TestCase({
+
+        name: "CSSLint object tests",
+        
+        "Adjoining classes should not cause an error": function(){
+            var result = CSSLint.verify(".foo.bar{}", { });
+            Assert.areEqual(0, result.messages.length);
+        }
+
+    }));
+
+})();
